--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,7 +33,8 @@
             "type": "Ruby",
             "request": "launch",
             "cwd": "${workspaceRoot}",
-            "program": "/path/to/rubygem/bin/rspec",
+            "pathToBundler": "${workspaceRoot}/bin/bundle",
+            "program": "${workspaceRoot}/bin/rspec",
             "args": [
                 "--pattern",
                 "${workspaceRoot}/spec/**/*_rspec.rb"
@@ -45,10 +46,10 @@
             "request": "launch",
             "cwd": "${workspaceRoot}",
             "useBundler": true,
-            "pathToBundler": "/path/to/rubygem/wrappers/bundle",
-            "pathToRDebugIDE": "/path/to/rubygem/gems/ruby-debug-ide-x.x.x/bin/rdebug-ide",
+            "pathToBundler": "${workspaceRoot}/bin/bundle",
+            "pathToRDebugIDE": "${workspaceRoot}/bin/rdebug-ide",
             "debuggerPort": "1235",
-            "program": "/path/to/rubygem/bin/rspec",
+            "program": "${workspaceRoot}/bin/rspec",
             "args": [
                 "${file}"
             ]
@@ -59,10 +60,10 @@
           "request": "launch",
           "cwd": "${workspaceRoot}",
           "useBundler": true,
-          "pathToBundler": "/path/to/rubygem/wrappers/bundle",
-          "pathToRDebugIDE": "/path/to/rubygem/gems/ruby-debug-ide-x.x.x/bin/rdebug-ide",
+          "pathToBundler": "${workspaceRoot}/bin/bundle",
+          "pathToRDebugIDE": "${workspaceRoot}/bin/rdebug-ide",
           "debuggerPort": "1235",
-          "program": "/path/to/rubygem/bin/rspec",
+          "program": "${workspaceRoot}/bin/rspec",
           "args": ["${file}:${lineNumber}"]
         }
     ]
