--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "ChatterBox",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.2",
     "@rails/webpacker": "^4.0.7",
     "bootstrap": "^4.3.1",
+    "clean-webpack-plugin": "^3.0.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
