--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "clean-webpack-plugin": "^3.0.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
+    "turbolinks": "^5.2.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vue-turbolinks": "^2.0.4"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.8.0"
